test/message/source_map_throw_catch.out
reachable
*typescript-throw.ts:18
    throw Error('an exception');
          ^
Error: an exception
    at *typescript-throw.ts:18:11*
    at *typescript-throw.ts:24:1*
    at Module._compile (node:internal/modules/cjs/loader:*)
    at Module._extensions..js (node:internal/modules/cjs/loader:*)
    at Module.load (node:internal/modules/cjs/loader:*)
    at Module._load (node:internal/modules/cjs/loader:*)
    at Module.require (node:internal/modules/cjs/loader:*)
    at require (node:internal/modules/cjs/helpers:*)
    at Object.<anonymous> (*source_map_throw_catch.js:6:3)
    at Module._compile (node:internal/modules/cjs/loader:*)
